[tool.poetry]
name = "synapse-reports"
version = "0.1.0"
description = "Projetos de Professional Services HUB"
packages = [ { include = "PSComponents", from = "lib"} ]
authors = ["Spider <anderson.silva@wake.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apiClient = { path = "./components/PSComponents/apiClient" }
config = { path = "./components/PSComponents/config" }
csv_generator = { path = "./components/PSComponents/csv_generator" }
log_generate = { path = "./components/PSComponents/log_generate" }
report_manager = { path = "./components/PSComponents/report_manager" }
s3_uploader = { path = "./components/PSComponents/s3_uploader" }
sftp_uploader = { path = "./components/PSComponents/sftp_uploader" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
